--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+*,
 html,
 body {
   height: 100%;
@@ -9,12 +9,10 @@ body {
   padding: 0;
   scroll-behavior: smooth;
   background-color: #0f0f11;
-}
-
-#root {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
+  max-height: 100vh;
+  box-sizing: border-box;
 }
 
 @layer base {
@@ -178,9 +176,7 @@ body,
 button,
 input,
 textarea {
-  transition:
-    background-color 0.3s ease-in-out,
-    border-color 0.3s ease-in-out,
+  transition: background-color 0.3s ease-in-out, border-color 0.3s ease-in-out,
     color 0.3s ease-in-out;
 }
 
@@ -193,9 +189,7 @@ textarea {
 
 /* Dark Mode Transitions */
 .dark-mode-transition {
-  transition:
-    background-color 0.5s ease-in-out,
-    color 0.5s ease-in-out;
+  transition: background-color 0.5s ease-in-out, color 0.5s ease-in-out;
 }
 
 /* Hide scrollbar */
